--- a/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
@@ -1,61 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-   android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="7dp"
-    >
 
-    <LinearLayout
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/padding"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <FrameLayout
+        style="@style/margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:background="@drawable/display">
 
-        <FrameLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/alarmsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/display">
+            android:background="#000000" />
+    </FrameLayout>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="12dp"
-                android:layout_weight="1"
-                android:background="#050505"
-                android:visibility="gone" />
+    <LinearLayout
+        style="@style/margin"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/button_space"
+        android:orientation="horizontal">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/alarmsList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#000000" />
-        </FrameLayout>
-
-        <LinearLayout
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/add_alarm_button"
+            style="@style/buttonSingleTall"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/button_space"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/add_alarm_button"
-                style="@style/buttonSingleTall"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="1dp"
-                android:layout_marginBottom="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_single"
-                android:tint="#A3B3CE"
-                app:srcCompat="@drawable/alarm_plus" />
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="3dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_single"
+            android:tint="#A3B3CE"
+            app:srcCompat="@drawable/alarm_plus" />
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
+
