--- a/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
+++ b/alarmClockFeature/src/main/res/layout/alarms_list_screen.xml
@@ -19,7 +19,7 @@
             android:id="@+id/alarmsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black" />
+            android:background="?attr/black" />
     </FrameLayout>
 
     <LinearLayout
