--- a/coreUI/src/main/res/color/item_activatable_state_list.xml
+++ b/coreUI/src/main/res/color/item_activatable_state_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true"
-        android:color="@color/tint"/> <!-- activated -->
+        android:color="?attr/tint"/> <!-- activated -->
     <item android:state_activated="false"
-        android:color="@color/text_gray"/> <!-- deactivated -->
-    <item android:color="@color/text_gray"/> <!-- default -->
+        android:color="?attr/text_gray"/> <!-- deactivated -->
+    <item android:color="?attr/text_gray"/> <!-- default -->
 </selector>
