--- a/coreUI/src/main/res/color/tint_pressed_state_list.xml
+++ b/coreUI/src/main/res/color/tint_pressed_state_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:color="@color/branded_light"/>
+        android:color="?attr/branded_light"/>
     <item android:state_checked="true"
-        android:color="@color/branded_light"/>
+        android:color="?attr/branded_light"/>
     <item android:state_focused="true"
-        android:color="@color/tint"/>
+        android:color="?attr/tint"/>
     <item
-        android:color="@color/tint"/>
+        android:color="?attr/tint"/>
 </selector>
