--- a/coreUI/src/main/res/drawable/button_center.xml
+++ b/coreUI/src/main/res/drawable/button_center.xml
@@ -13,16 +13,16 @@
                         android:right="0dp"
                         android:bottom="0dp" />
                     <solid
-                        android:color="@color/light" />
+                        android:color="?attr/light" />
                 </shape>
             </item>
             <item >
                 <shape android:shape="rectangle">
                     <gradient
                         android:angle="90"
-                        android:startColor="@color/button_startColor"
-                        android:centerColor="@color/button_centerColor"
-                        android:endColor="@color/button_endColor"
+                        android:startColor="?attr/button_startColor"
+                        android:centerColor="?attr/button_centerColor"
+                        android:endColor="?attr/button_endColor"
                         android:type="linear" />
                 </shape>
             </item>
@@ -35,9 +35,9 @@
                     android:shape="rectangle">
                     <gradient
                         android:angle="90"
-                        android:startColor="@color/button_startColor_pressed"
-                        android:centerColor="@color/button_centerColor_pressed"
-                        android:endColor="@color/button_endColor_pressed"
+                        android:startColor="?attr/button_startColor_pressed"
+                        android:centerColor="?attr/button_centerColor_pressed"
+                        android:endColor="?attr/button_endColor_pressed"
                         android:type="linear" />
                 </shape>
             </item>
