--- a/coreUI/src/main/res/drawable/button_r.xml
+++ b/coreUI/src/main/res/drawable/button_r.xml
@@ -54,9 +54,9 @@
                 android:bottom="0dp" />
             <gradient
                 android:angle="90"
-                android:startColor="@color/button_startColor"
-                android:centerColor="@color/button_centerColor"
-                android:endColor="@color/button_endColor"
+                android:startColor="?attr/button_startColor"
+                android:centerColor="?attr/button_centerColor"
+                android:endColor="?attr/button_endColor"
                 android:type="linear" />
 
         </shape>
