--- a/coreUI/src/main/res/drawable/thumb.xml
+++ b/coreUI/src/main/res/drawable/thumb.xml
@@ -11,9 +11,9 @@
                 android:bottom="5dp" />
             <gradient
                 android:angle="270"
-                android:startColor="@color/branded_light"
-                android:centerColor="@color/branded_color"
-                android:endColor="@color/branded_dark"
+                android:startColor="?attr/branded_light"
+                android:centerColor="?attr/branded_color"
+                android:endColor="?attr/branded_dark"
                 android:type="linear"
                 android:useLevel="false"  />
             <stroke android:width="1dp" android:color="@android:color/black" />
@@ -27,7 +27,7 @@
             android:shape="oval">
             <gradient
                 android:angle="270"
-                android:startColor= "@color/branded_color"
+                android:startColor= "?attr/branded_color"
                 android:centerColor="#484848"
                 android:endColor="#5d5d5d"
                 android:type="linear"
