--- a/equalizerFeature/src/main/res/drawable/tmpp.xml
+++ b/equalizerFeature/src/main/res/drawable/tmpp.xml
@@ -7,7 +7,7 @@
         android:right="0dp"
         android:top="0dp">
         <shape android:shape="oval">
-            <solid android:color="@color/black" />
+            <solid android:color="?attr/black" />
         </shape>
     </item>
     <item
@@ -17,7 +17,7 @@
         android:right="0dp"
         android:top="0dp">
         <shape android:shape="oval">
-            <solid android:color="@color/black" />
+            <solid android:color="?attr/black" />
         </shape>
     </item>
 </layer-list>
