--- a/playListDialogFeature/src/main/res/layout-land/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout-land/playlist_dialog.xml
@@ -65,7 +65,7 @@
 
                         android:text="@string/newPlaylist"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                        android:textColor="@color/green" />
+                        android:textColor="?attr/green" />
                 </FrameLayout>
 
             </LinearLayout>
