--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -42,7 +42,7 @@
 
                     android:text="@string/newPlaylist"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/green" />
+                    android:textColor="?attr/green" />
             </FrameLayout>
 
             <FrameLayout
