--- a/trackdialogFeature/src/main/res/layout/item_media.xml
+++ b/trackdialogFeature/src/main/res/layout/item_media.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/icon"
         app:srcCompat="@drawable/icon_media_item_level_list"
-        app:tint="@color/tint"
+        app:tint="?attr/tint"
         style="@style/leadingIcon" />
 
     <TextView
