--- a/coreUI/src/main/res/drawable/button_r.xml
+++ b/coreUI/src/main/res/drawable/button_r.xml
@@ -42,7 +42,7 @@
                 android:color="#000000" />
         </shape>
     </item>
-    <item android:state_selected="true">
+    <item android:state_pressed="true">
         <shape
             android:shape="rectangle">
             <corners
@@ -54,7 +54,7 @@
                 android:bottom="0dp" />
             <gradient
                 android:angle="90"
-                android:startColor="?attr/button_startColor"
+                android:startColor="?attr/red"
                 android:centerColor="?attr/button_centerColor"
                 android:endColor="?attr/button_endColor"
                 android:type="linear" />
