--- a/playListDialogFeature/src/main/res/layout/item_playlist.xml
+++ b/playListDialogFeature/src/main/res/layout/item_playlist.xml
@@ -18,7 +18,7 @@
 
         android:layout_weight="7"
         android:gravity="center"
-        android:textColor="@color/selectable_color"
+        android:textColor="@color/activatable_color"
         android:textSize="@dimen/font_size_regular"
         android:textStyle="bold"
         tools:text="id" />
@@ -39,7 +39,7 @@
         android:paddingStart="10dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:textColor="@color/selectable_color"
+        android:textColor="@color/activatable_color"
         android:textStyle="bold"
         tools:text="Playlist title" />
 
