--- a/coreUI/src/main/res/values/themes.xml
+++ b/coreUI/src/main/res/values/themes.xml
@@ -4,9 +4,12 @@
        <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash</item>
         <item name="branded_color">@color/branded_color</item>
+
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
 
     <style name="Theme.YESActivityDark" parent="Theme.MusicPlayer">
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/branded_color</item>
 
@@ -36,6 +39,7 @@
         <item name="launcher_background" >@color/branded_color</item>
     </style>
     <style name="Theme.YESActivityLight" parent="Theme.MusicPlayer">
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/branded_color</item>
 
